--- a/assets/style.css
+++ b/assets/style.css
@@ -106,7 +106,8 @@ body {
 .nav-pills .nav-link.active,
 .nav-pills .show > .nav-link {
     color: #fff;
-    background-color: #beb45a;
+    background-color: #5b5824;
+    /* background-color: #beb45a; */
     border-radius: 0;
 }
 .nav-pills .nav-link {
