--- a/assets/style.css
+++ b/assets/style.css
@@ -115,7 +115,7 @@ body {
 }
 .item-column {
     position: relative;
-    margin-bottom: 0 !important;
+    margin-bottom: 0;
     padding: 0;
 }
 .item-column::after {
