--- a/assets/style.css
+++ b/assets/style.css
@@ -39,8 +39,8 @@ body {
 }
 
 .social-link img {
-    width: 100%;
-    height: 100%;
+    width: 20px;
+    height: 20px;
 }
 
 #about {
@@ -202,6 +202,7 @@ body {
 #contact .container {
     display: flex;
 }
+
 .picture.right::before {
     content: " ";
     background-color: #beb45a;
