--- a/assets/style.css
+++ b/assets/style.css
@@ -48,6 +48,11 @@ body {
     height: 20px;
 }
 
+.carousel-item {
+    width: 100%;
+    height: 100%;
+}
+
 #about {
     display: flex;
     background-color: #f6d2b8;
